新增生产环境切换

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start:dev": "cross-env NODE_ENV=development nodemon ./bin/www",
+    "start:prod": "cross-env NODE_ENV=production nodemon ./bin/www",
     "reset-db": "cross-env NODE_ENV=development sequelize db:migrate:undo:all && cross-env NODE_ENV=development sequelize db:migrate",
     "reset-seed": "cross-env NODE_ENV=development sequelize db:seed:undo:all && cross-env NODE_ENV=development sequelize db:seed:all"
   },
